fix: replace deprecated word-wrap with overflow-wrap in table styles

--- a/docs/assets/scss/_table.scss
+++ b/docs/assets/scss/_table.scss
@@ -26,7 +26,7 @@ table td {
   padding: 8px;
   text-align: left;
   max-width: 300px;
-  word-wrap: break-word;
+  overflow-wrap:break-word;
 }
 table td img {
   text-align: center;
